# flatfield_tool

./: README.md  create_desktop_shortcut.py  environment.yml  pyproject.toml  requirements.txt  setup_ubuntu_22_04.sh
flatfield/: cli.py  parameters.py
flatfield/flatfield/: compute.py
flatfield/functions/: apply.py
flatfield/gui/: flatfield_gui.py
