[project]
name = "cephla-flatfield-tool"
version = "1.0.0"
description = "Cephla Flat-field Correction Tool"
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.26",
  "scikit-image>=0.23",
  "basicpy>=1.0",
  "PyQt5>=5.15",
  "matplotlib>=3.8",
]

[tool.uv]
resolver = "lowest-direct"  # Use conservative resolution for compatibility
