[project]
name = "cephla-flatfield-tool"
version = "1.0.0"
description = "Cephla Flat-field Correction Tool"
requires-python = ">=3.9"

dependencies = [
  "python=3.10",
  "numpy>=1.26",
  "scikit-image>=0.23",
  "PyQt5>=5.15",
  "matplotlib>=3.8",
]

[tool.uv]
resolution = "lowest-direct"  # conservative resolution for compatibility
